--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "@vanessapeixoto/my-modal",
-  "version": "1.0.3",
+  "version": "1.1.5",
   "type": "module",
-  "main": "dist/index.cjs", 
-  "module": "dist/index.js",
-  "exports": {
-    ".": {
-      "import": "dist/index.js",
-      "require": "dist/index.cjs"
-    }
-  },
+  "main": "dist/index.js", 
   "types": "dist/index.d.ts",
   "files": [
-    "dist", 
-    "src", 
+    "dist",
+    "src",
     "README.md"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc",
+    "build": "tsc --build --force",
     "lint": "eslint .",
     "preview": "vite preview"
   },
